syntax = "proto3";

package entrypoint.login;

option java_package = "de.romqu.schimmelhofapi.entrypoint.login";
option java_multiple_files = true;

message LoginDtoIn {
  string username = 1;
  string passwordPlain = 2;
}